--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
               <p class="mb-5" data-aos="fade-right" data-aos-delay="100">Click the START button below to initiate the process</p>
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500">
               <a href="loading.html" class="btn btn-outline-white start-p col-3" >START</a> <a class="col-3 btn "></a> 
-              <a onclick="confirmation()"  href="emergency.html" id="emg" class="btn btn-outline-white col-3">EMERGENCY!</a></p>
-              <!-- <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="loading.html" class="btn btn-outline-white start-p">Emergency</a></p> -->
+              <a onclick="confirmation()"  href="emergency.html" id="emg" class="btn btn-outline-white col-3 emg">EMERGENCY!</a></p>
             </div>
 
 
