--- a/clinical.html
+++ b/clinical.html
@@ -80,19 +80,19 @@
     <form action="active-medication.html">
         <div class="question row">
             <h1 class="animated-text">1. Enter if applies (One or Many)</h1> <br><br>
-            <label class="col-3 question-label"><input type="checkbox" name="" value=""> BP </label> 
+            <label class="col-3 question-label"><input type="checkbox" name="" value="">1. BP </label> 
             <label class="col-3 question-label"></label> 
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder="  Enter Value"></label><br>
-            <label class="col-3 question-label"><input type="checkbox" name="" value=""> Temperature</label>
+            <label class="col-3 question-label"><input type="checkbox" name="" value="">2. Temperature</label>
             <label class="col-3 question-label"></label> 
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder="  Enter Value"></label><br>
-            <label class="col-3 question-label"><input type="checkbox" name="" value=""> Height</label>
+            <label class="col-3 question-label"><input type="checkbox" name="" value="">3. Height</label>
             <label class="col-3 question-label"></label> 
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder="  Enter Value"></label><br>
-            <label class="col-3 question-label"><input type="checkbox" name="" value=""> Weight</label> 
+            <label class="col-3 question-label"><input type="checkbox" name="" value="">4. Weight</label> 
             <label class="col-3 question-label"></label> 
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder="  Enter Value"></label><br>
-            <label class="col-3 question-label"><input type="checkbox" name="" value=""> BMI</label> 
+            <label class="col-3 question-label"><input type="checkbox" name="" value="">5. BMI</label> 
             <label class="col-3 question-label"></label> 
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder="  Enter Value"></label><br>
             <label class="col-3 question-label"><input type="text" name="" value="" placeholder=" Other"></label>
