--- a/follow-up-no.html
+++ b/follow-up-no.html
@@ -79,65 +79,65 @@
 <div class="container">
     <form action="history.html">
         <div class="question row">
-            <h1 class="animated-text">1: Enter the sutaible options</h1> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Fever</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Cough</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Acidity</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Diabetes</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Headache</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Joint pain</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Common cold</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Stomach pain</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Period problem</label><br> 
-            <label class="col-4 question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
+            <h1 class="animated-text">1: Enter the sutaible options</h1> <br><br><br><br>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 1. Acidity  <img class="pictorial-representation" src="assets/img/acidity.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 2. Fever <img class="pictorial-representation" src="assets/img/fever.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 3. Cough <img class="pictorial-representation" src="assets/img/cough.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 4. Diabetes <img class="pictorial-representation" src="assets/img/diabetes.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 5. Headache <img class="pictorial-representation" src="assets/img/headache.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 6. Joint pain <img class="pictorial-representation" src="assets/img/joint-pain.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 7. Common cold <img class="pictorial-representation" src="assets/img/common-cold.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 8. Stomach pain <img class="pictorial-representation" src="assets/img/stomach-pain .jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 9. Period problem <img class="pictorial-representation" src="assets/img/period-problem.jpg" alt="acidity" width="250px"></label><br><br><br>
+            <label class="col question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">2: Since how long you have fever?</h1><br><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Every seasonal change</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Recently 1-2 days</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> 1-2 weeks</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> 1 month</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Since last</label><br><br><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 1. Every seasonal change</label>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 2. Recently 1-2 days</label>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 3. 1-2 weeks</label>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 4. 1 month</label>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 5. Since last</label><br><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">3: How did the fever starts?</h1><br><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Slowly</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Suddenly</label><br><br><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 1. Slowly</label>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 2. Suddenly</label><br><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">4: How is your fever?</h1><br><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> High fever with shivering</label><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> High fever with chills</label><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> High fever with chills and shivering</label><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Low grade fever</label><br><br><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 1. High fever with shivering</label><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 2. High fever with chills</label><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 3. High fever with chills and shivering</label><br>
+            <label class="col-4 question-label"><input type="radio" name="" value=""> 4. Low grade fever</label><br><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">5: What is your temperature?(*F)</h1><br><br>
-            <label class="col-4 question-label"><input type="text" name="q3_option" value="" placeholder=" Enter temperature here"></label><br><br><br>
+            <label class="col-4 question-label"><img class="pictorial-representation" src="assets/img/temp.jpg" alt="acidity" width="250px"><input type="text" name="q3_option" value="" placeholder=" Enter temperature here"></label><br><br><br>
         </div>
         <div class="question row">
-            <h1 class="animated-text">6: Select the relevent reason for fever</h1><br><br>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Tattoo</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Accident</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Insect Bite</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Any surgery</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Animal Scratch</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Dental Treatment</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Burning urination</label>
-            <label class="col-4 question-label"><input type="radio" name="" value=""> Any Bleeding</label><br>
-            <label class="col-4 question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
+            <h1 class="animated-text">6: Select the relevent reason for fever</h1><br><br><br><br>
+            <label class="col question-label"><input type="radio" name="" value="">1. Tattoo<img class="pictorial-representation" src="assets/img/tattoo.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">2. Accident<img class="pictorial-representation" src="assets/img/accident.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">3. Insect Bite<img class="pictorial-representation" src="assets/img/Insect-Bite.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">4. Any surgery<img class="pictorial-representation" src="assets/img/surgery.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">5. Animal Scratch<img class="pictorial-representation" src="assets/img/Animal-Scratch.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">6. Dental Treatment<img class="pictorial-representation" src="assets/img/Dental-Treatment.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="radio" name="" value="">7. Burning urination<img class="pictorial-representation" src="assets/img/Burning-urination.jpg" alt="acidity" width="250px"> </label>
+            <label class="col question-label"><input type="radio" name="" value="">8. Any Bleeding<img class="pictorial-representation" src="assets/img/Bleeding.jpg" alt="acidity" width="250px"> </label><br><br>
+            <label class="col question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
         </div>
         <div class="question row">
-            <h1 class="animated-text">7: Do you have any other related problems</h1> <br><br>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Headache</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Sweating</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Weakness</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Wheezing</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Dizziness</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Confusion</label>
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Diarrhoea </label> 
-            <label class="col-4 question-label"><input type="checkbox" name="" value=""> Chest pain </label><br>
-            <label class="col-4 question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
+            <h1 class="animated-text">7: Do you have any other related problems</h1> <br><br><br><br>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 1. Headache<img class="pictorial-representation" src="assets/img/headache.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 2. Sweating<img class="pictorial-representation" src="assets/img/Sweating.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 3. Weakness<img class="pictorial-representation" src="assets/img/Weakness.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 4. Wheezing<img class="pictorial-representation" src="assets/img/Wheezing.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 5. Dizziness<img class="pictorial-representation" src="assets/img/Dizziness.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 6. Confusion<img class="pictorial-representation" src="assets/img/Confusion.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 7. Diarrhoea <img class="pictorial-representation" src="assets/img/Diarrhoea.jpg" alt="acidity" width="250px"></label>
+            <label class="col question-label"><input type="checkbox" name="" value=""> 8. Chest pain <img class="pictorial-representation" src="assets/img/Chest-pain.jpg" alt="acidity" width="250px"></label><br>
+            <label class="col question-label"><input type="text" name="" value="" placeholder=" Other"></label><br><br>
         </div>
         <div class="butt">
           <button type="submit" class="btn-45 "><span>Submit</span></button>
