--- a/history.html
+++ b/history.html
@@ -80,34 +80,34 @@
     <form action="clinical.html">
         <div class="question row">
             <h1 class="animated-text">1: Medical</h1> <br><br>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Medical treatment</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Diabetes</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Mental disorders</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Hypertension</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Surgeries</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Obstetric and Gynaecology</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Endocrine disorders</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Metabolic disorders</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Cardiovascular</label><br> 
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 1. Medical treatment</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 2. Diabetes</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 3. Mental disorders</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 4. Hypertension</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 5. Surgeries</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 6. Obstetric and Gynaecology</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 7. Endocrine disorders</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 8. Metabolic disorders</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> 9. Cardiovascular</label><br> 
             <label class="col-4 question-label"><input type="text" name="q3_option" value="" placeholder=" Other"></label><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">2: Personal</h1> <br><br>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Alcohol</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Drugs</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Smoking</label><br> 
-            <label class="col-4 question-label"><input type="text" name="q3_option" value="" placeholder=" Other"></label><br><br>
+            <label class="col-4 question-label"><input type="checkbox" name="q2_option[]" value=""> 1. Alcohol</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q2_option[]" value=""> 2. Drugs</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q2_option[]" value=""> 3. Smoking</label><br> 
+            <label class="col-4 question-label"><input type="text" name="q2_option" value="" placeholder=" Other"></label><br><br>
         </div>
         <div class="question row">
             <h1 class="animated-text">3: Family History</h1> <br><br>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Diabetes</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Osteoporosis</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> High Cholesterol</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Hypertension</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Asthma</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Birth defects</label>
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Mental illness</label> 
-            <label class="col-4 question-label"><input type="checkbox" name="q1_option[]" value=""> Smoke </label><br> 
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 1. Diabetes</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 2. Osteoporosis</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 3. High Cholesterol</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 4. Hypertension</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 5. Asthma</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 6. Birth defects</label>
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 7. Mental illness</label> 
+            <label class="col-4 question-label"><input type="checkbox" name="q3_option[]" value=""> 8. Smoke </label><br> 
             <label class="col-4 question-label"><input type="text" name="q3_option" value="" placeholder=" Other"></label><br><br>
         </div>
 
